src/main/resources/tests/Semantics/good/assignmentType3.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character := 'e';
begin
    X := 'a';
end ExampleProcedure;
