src/main/resources/tests/Semantics/bad/variableType1.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : recordTest; -- Déclaration d'un type non enregistré
begin
    X; -- Erreur de compilation
end ExampleProcedure;
